# micro-social-app-fastapi-clean-architecture

./: .pre-commit-config.yaml  docker-compose.yaml  pyproject.toml
pg-init-scripts/: create-schemas.sql
social-backend/: README.md  pyproject.toml
social-backend/src/: alembic.ini
social-backend/src/social_backend/: __init__.py  app.py  fs_app.py  fs_serve_app.py
social-backend/src/social_backend/application/dto/: __init__.py  user.py
social-backend/src/social_backend/application/interactors/: __init__.py  create_user.py  get_user.py  get_users.py
social-backend/src/social_backend/application/interfaces/: __init__.py  db_session.py  user.py
social-backend/src/social_backend/application/services/: __init__.py  create_user.py  get_user.py
social-backend/src/social_backend/config/: __init__.py  app.py  broker.py  database.py  settings.py
social-backend/src/social_backend/config/envs/: .env.template
social-backend/src/social_backend/config/yaml/: default.yaml
social-backend/src/social_backend/controllers/amqp/: users.py
social-backend/src/social_backend/controllers/api/: __init__.py
social-backend/src/social_backend/controllers/api/v1/: __init__.py
social-backend/src/social_backend/controllers/api/v2/: __init__.py  users.py
social-backend/src/social_backend/controllers/schemas/: __init__.py  user.py
social-backend/src/social_backend/controllers/views/: users.py
social-backend/src/social_backend/domain/: __init__.py  user.py
social-backend/src/social_backend/infra/: broker.py  db.py
social-backend/src/social_backend/infra/gateways/: __init__.py  user_gateway.py
social-backend/src/social_backend/infra/migrations/: env.py
social-backend/src/social_backend/infra/migrations/versions/: 2026_02_22_2134-395eddb0178f_init_citext_ext.py  2026_02_22_2137-3d6f629f564d_create_table_users.py
social-backend/src/social_backend/infra/models/: __init__.py  base.py  user.py
social-backend/src/social_backend/ioc/: __init__.py  app.py
