[project]
name = "social-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Suren Khorenyan", email = "surenkhorenyan@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
social-backend = "social_backend:main"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"
